--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -1,34 +1,16 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
     <PreferenceCategory android:title="General">
-        <SwitchPreference
-            android:defaultValue="true"
-            android:key="example_switch"
-            android:summary="@string/pref_description_social_recommendations"
-            android:title="@string/pref_title_social_recommendations" />
-
         <!-- NOTE: EditTextPreference accepts EditText attributes. -->
         <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
         <EditTextPreference
             android:capitalize="words"
             android:defaultValue="@string/pref_default_display_name"
             android:inputType="textCapWords"
-            android:key="example_text"
+            android:key="PLAYER_NAME"
             android:maxLines="1"
             android:selectAllOnFocus="true"
             android:singleLine="true"
             android:title="@string/pref_title_display_name" />
-
-        <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
-             dismiss it. -->
-        <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
-        <ListPreference
-            android:defaultValue="-1"
-            android:entries="@array/pref_example_list_titles"
-            android:entryValues="@array/pref_example_list_values"
-            android:key="example_list"
-            android:negativeButtonText="@null"
-            android:positiveButtonText="@null"
-            android:title="@string/pref_title_add_friends_to_messages" />
     </PreferenceCategory>
     <PreferenceCategory android:title="Advanced">
         <EditTextPreference
@@ -49,15 +31,15 @@
             android:defaultValue="20"
             android:inputType="numberSigned|numberDecimal"
             android:key="BUMP_KEY"
-            android:summary="How much percentage ball loses when hits wall"
-            android:title="Wall hit defect" />
+            android:summary="@string/wall_hit_summary"
+            android:title="@string/wall_hit_title" />
 
         <EditTextPreference
             android:defaultValue="0.5"
             android:inputType="numberDecimal"
             android:key="TRACTION_KEY"
-            android:summary="Opis neki za trenje"
-            android:title="Trenje" />
+            android:summary="@string/traction_summary"
+            android:title="@string/traction_title" />
     </PreferenceCategory>
 
 </PreferenceScreen>
