hotfix for the loadPolygon; statistics load needs fixing

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,6 +25,7 @@
         android:text="Game Activity start" />
 
     <ListView
+        android:id="@+id/mainActivityListView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
