--- a/app/src/main/res/menu/new_terrain_menu.xml
+++ b/app/src/main/res/menu/new_terrain_menu.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <group android:checkableBehavior="single">
-    <item android:title="Add wall" android:id="@+id/add_wall" android:checked="true"/>
-    <item android:title="Add hole" android:id="@+id/add_hole"/>
-    <item android:title="Add start point" android:id="@+id/add_start_point" />
-    <item android:title="Add end point" android:id="@+id/add_end_point" />
-    <item android:title="Move" android:id="@+id/move" />
-    <item android:title="Delete" android:id="@+id/delete"/>
-
+        <item android:title="Add wall" android:id="@+id/add_wall" android:checked="true"/>
+        <item android:title="Add hole" android:id="@+id/add_hole"/>
+        <item android:title="Add start point" android:id="@+id/add_start_point" />
+        <item android:title="Add end point" android:id="@+id/add_end_point" />
+        <item android:title="Move" android:id="@+id/move" />
+        <item android:title="Delete" android:id="@+id/delete"/>
     </group>
+    <item android:title="Undo" android:id="@+id/undo"/>
     <item android:title="Save" android:id="@+id/save"/>
 </menu>
