--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,16 +15,16 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="TODO: LISTA RASPOLOZIVIH POLIGONA OVDE TREBA!" />
-
-    <Button
-        android:id="@+id/buttonMain"
+        android:layout_weight="1"
+        android:text="Odaberi poligon" />
+    <TextView
+        android:id="@+id/textViewMainStatus"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:text="Game Activity start" />
+        android:layout_weight="1" />
 
     <ListView
+        android:layout_weight="10"
         android:id="@+id/mainActivityListView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
