--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -16,7 +16,8 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:text="Odaberi poligon" />
+        android:text="@string/choose_polygon"
+        android:textSize="24sp" />
     <TextView
         android:id="@+id/textViewMainStatus"
         android:layout_width="wrap_content"
