--- a/app/src/main/res/layout/activity_game.xml
+++ b/app/src/main/res/layout/activity_game.xml
@@ -7,6 +7,7 @@
     tools:context="com.azaric.tiltmaze.GameActivity">
 
         <com.azaric.tiltmaze.MyImageView
+            android:background="@color/colorBrown"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:id="@+id/my_image_view"/>
